main logic
