# ppay_app/app/controllers/api/v1/payments/base_controller.rb
@@ -1,5 +1,3 @@
-# frozen_string_literal: true
-
 module Api
   module V1
     module Payments
@@ -10,7 +8,22 @@ module Api
         prepend_before_action :authenticate_with_api_key!
 
         def create
+          preset_name = params[:preset_name]
+
           @object = current_bearer.becomes(Merchant).public_send(model_class_plural.to_s).new(permitted_params)
+
+          form_customization = if preset_name.present?
+            @object.merchant.form_customizations.find_by(name: preset_name)
+          else
+            @object.merchant.form_customizations.find_by(default: true)
+          end
+
+          if form_customization
+            @object.form_customization = form_customization
+          elsif preset_name.present?
+            default_form_customization = @object.merchant.form_customizations.find_by(default: true)
+            @object.form_customization = default_form_customization if default_form_customization
+          end
 
           if @object.save
             render json: serialized_object, status: :created
