# ppay_app/swagger/v1/swagger.json
@@ -675,6 +675,10 @@
             "type": "string",
             "example": "ru"
           },
+          "preset_name": {
+            "type": "string",
+            "example": "preset_1"
+          },
           "redirect_url": {
             "type": "string",
             "example": "https://example.com/redirect_url"
@@ -703,6 +707,10 @@
           "locale": {
             "type": "string",
             "example": "ru"
+          },
+          "preset_name": {
+            "type": "string",
+            "example": "preset_1"
           },
           "redirect_url": {
             "type": "string",
